------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

January 9 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Fixed a bug that sometimes prevented Haedlac from being teleported to aid
	  Petrus ere the final battle
	* Removed bulimia damage type
	* Greatly optimized the creation of sparkling and lightning-shooting objects
	* IVAN's total RAM usage on my system reduced from 30 Mb to 10 Mb
	* Binary initialization speeded up by 25%
	* The script now supports cumulative comments

January 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Player can no longer choke on his/her food

January 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* A floating eye can't make enemies faint if the they don't see it
	* Corrected a rounding error bug in the LOS code
	* Endurance changes affect current HP a little differently

January 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Lookmode now shows if a monster has panicked. (now works)
	
January 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Lookmode now shows if a monster has panicked.

January 5 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Intact and broken battle-axe, bastard sword, scythe and club pictures added
	  to item.pcx by Kahvi
	* Ghost of Brezhnev added to char.pcx by Kahvi
	* New basic weapons added: bastard sword, battle-axe and scythe
	* Implemented an AD&D style weapon categorization, which I found much more
	  balanced than our old one
	* If the handle of a weapon is made of same material as the edge, SoCM alters
	  it, too
	* Added a gum solution to prevent whips of thievery from stealing the
	  Justifier; this was a too easy way to get rid of Petrus